color contrasts corrected

--- a/hypha/static_src/src/sass/public/abstracts/_variables.scss
+++ b/hypha/static_src/src/sass/public/abstracts/_variables.scss
@@ -11,14 +11,14 @@ $color--dark-grey: #404041;
 
 // Brand
 $color--lightest-blue: #24aae1;
-$color--light-blue: #0d7db0;
+$color--light-blue: #1d79a8;
 $color--light-blue-90: transparentize($color--light-blue, .9);
 $color--lighter-blue: #7ab8d4;
 $color--dark-blue: #0c72a0;
 $color--darkest-blue: #3d6bdb;
 $color--mustard: #e6ab32;
 $color--purple: #8c0bbf;
-$color--pink: #e35ca6;
+$color--pink: #d02a85;
 $color--light-pink: #ffe1df;
 $color--light-green: #e1fae1;
 $color--tomato: #f05e54;
